# dss-installer

./: .gitignore  README.md  meson.build
data/: dss-installer.desktop.in  meson.build
data/icons/: meson.build
debian/: changelog  control  copyright  rules
src/: bootstrap.sh  console.py  dss-installer.in  gpu.sh  initialize.sh  main.py  meson.build  setup.sh
